feat: add swagger annotation and update post route
